--- a/resources/Strings.resx
+++ b/resources/Strings.resx
@@ -161,6 +161,10 @@
     <value>strings.FatalErrorOccured</value>
     <comment>A fatal error occurred...</comment>
   </data>
+  <data name="NotWindows" xml:space="preserve">
+    <value>strings.NotWindows</value>
+    <comment>WinClean doesn't seem to be running on Windows! WinClean only works on Windows 10.</comment>
+  </data>
   <data name="Select" xml:space="preserve">
     <value>strings.Select</value>
     <comment>Select</comment>
