--- a/resources/Strings.resx
+++ b/resources/Strings.resx
@@ -137,6 +137,10 @@
     <value>strings.ArgParse.PartNotNumerical</value>
     <comment>Part " {part_name}" is not a number!</comment>
   </data>
+  <data name="ArgParse.SkippingLanguageSelection" xml:space="preserve">
+    <value>strings.ArgParse.SkippingLanguageSelection</value>
+    <comment>Part 0 for language selection will be skipped because locale has been given.</comment>
+  </data>
   <data name="CancelEventMessage" xml:space="preserve">
     <value>strings.CancelEventMessage</value>
     <comment>Canceled WinClean! Finishing up...</comment>
